--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ members = [
 version = "0.1.0"
 
 edition = "2021"
+# Keep in sync with RUST_MIN_VER in .github/workflows/ci.yml and with the relevant README.md files.
 rust-version = "1.75"
 license = "Apache-2.0 OR MIT"
 repository = "https://github.com/linebender/vello"
@@ -71,7 +72,7 @@ clippy.semicolon_if_nothing_returned = "warn"
 
 [workspace.dependencies]
 vello_encoding = { version = "0.1.0", path = "crates/encoding" }
-bytemuck = { version = "1.14.3", features = ["derive"] }
+bytemuck = { version = "1.15.0", features = ["derive"] }
 skrifa = "0.16.0"
 peniko = "0.1.0"
 futures-intrusive = "0.5.0"
@@ -79,11 +80,11 @@ raw-window-handle = "0.6.0"
 
 # NOTE: Make sure to keep this in sync with the version badge in README.md
 wgpu = { version = "0.19.3" }
-log = "0.4.20"
+log = "0.4.21"
 
 # Used for examples
-clap = "4.5.1"
-anyhow = "1.0"
+clap = "4.5.3"
+anyhow = "1.0.81"
 instant = { version = "0.1.12", features = ["wasm-bindgen"] }
 pollster = "0.3.0"
 wgpu-profiler = "0.16.1"
