[shaders] Repurpose the "full" feature
Previously the "full" feature was introduced to distinguish the
complete imaging model of vello from the more limited "reduced"
variant, which was intended to produce coverage masks for an atlas
based path renderer. This reduced variant was limited to only paths
without any blends, clips, or other non-path draw objects. This
specialization wasn't fully carried forward with the move from piet-gpu
to Vello, since some of the excluded features (in particular
anti-aliased clipping) turned out to be a desirable feature for
atlasing.

While there is still room for pipeline specializations and optimizations
geared towards coverage-mask atlas based path renderers, the existing
meaning of "full" left some important features out (such as the PTCL and
stroke style / path_ix monoids used in stroke expansion).

This change re-purposes the meaning of the "full" specialization. It is
now only present in the fine rasterization stage and enables the
gradient commands.

The vello_shaders crate now also provides a (default) feature called
"full" that gates the "full" define in all shader stages.

--- a/crates/shaders/Cargo.toml
+++ b/crates/shaders/Cargo.toml
@@ -10,9 +10,13 @@ repository.workspace = true
 publish = false # Remove this when the package is ready for publishing
 
 [features]
-default = ["compile", "wgsl", "msl"]
+default = ["compile", "wgsl", "msl", "full"]
 compile = ["naga", "thiserror"]
 
+# Enables the complete imaging model. When this feature is disabled, the fine rasterization
+# stage only supports drawing paths with a solid brush and clipping, and the shaders can
+# not be run with an encoding that contains gradient fills and images.
+full = []
 
 # Target shading language variants of the vello shaders to link into the library.
 wgsl = []
