[fine] Coverage-mask specialization and some shader feature cleanup (#540)
* [shaders] Remove force_rw_storage feature

This feature is no longer used and can be removed

* [shaders] Repurpose the "full" feature

Previously the "full" feature was introduced to distinguish the
complete imaging model of vello from the more limited "reduced"
variant, which was intended to produce coverage masks for an atlas
based path renderer. This reduced variant was limited to only paths
without any blends, clips, or other non-path draw objects. This
specialization wasn't fully carried forward with the move from piet-gpu
to Vello, since some of the excluded features (in particular
anti-aliased clipping) turned out to be a desirable feature for
atlasing.

While there is still room for pipeline specializations and optimizations
geared towards coverage-mask atlas based path renderers, the existing
meaning of "full" left some important features out (such as the PTCL and
stroke style / path_ix monoids used in stroke expansion).

This change re-purposes the meaning of the "full" specialization. It is
now only present in the fine rasterization stage and enables the
gradient commands.

The vello_shaders crate now also provides a (default) feature called
"full" that gates the "full" define in all shader stages.

* [fine] Define the "r8" permutation

The "r8" variant of the fine stage can be used to target storage
textures with the r8unorm texel format. This is specifically intended
to reduce the texture memory required for coverage-mask renderers that
only output 8-bits of coverage-as-alpha in a single channel. This
format is non-standard and requires the an implementation-specific
extension.

Currently this usage requires that any encoded color in a path brush use
only the red channel as the remaning channels will be ignored.

--- a/crates/shaders/Cargo.toml
+++ b/crates/shaders/Cargo.toml
@@ -10,21 +10,13 @@ repository.workspace = true
 publish = false # Remove this when the package is ready for publishing
 
 [features]
-default = ["compile", "wgsl", "msl"]
+default = ["compile", "wgsl", "msl", "full"]
 compile = ["naga", "thiserror"]
 
-# Enabling this feature applies a transformation that converts all storage bindings
-# to have the `read_write` access mode. For WGSL shaders, this affects the bind group
-# layout of all pipelines and changes the usage scope of storage buffers. For MSL shaders,
-# this removes the `const` qualifier from entry-point parameters in the `device` address
-# space. This allows bindings with mixed access modes to be backed by suballocations from
-# the same the buffer object.
-#
-# This feature doesn't apply to the fine stage where all storage bindings are readonly and
-# the same access mode restrictions do not apply.
-#
-# Enabling this feature may have a performance impact and is not recommended.
-force_rw_storage = []
+# Enables the complete imaging model. When this feature is disabled, the fine rasterization
+# stage only supports drawing paths with a solid brush and clipping, and the shaders can
+# not be run with an encoding that contains gradient fills and images.
+full = []
 
 # Target shading language variants of the vello shaders to link into the library.
 wgsl = []
