--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,6 +65,7 @@ log = { workspace = true }
 raw-window-handle = { workspace = true }
 futures-intrusive = { workspace = true }
 wgpu-profiler = { workspace = true, optional = true }
+slotmap = { workspace = true }
 
 [workspace.lints]
 clippy.doc_markdown = "warn"
@@ -77,6 +78,7 @@ skrifa = "0.19.0"
 peniko = "0.1.0"
 futures-intrusive = "0.5.0"
 raw-window-handle = "0.6.0"
+slotmap = "1.0.7"
 
 # NOTE: Make sure to keep this in sync with the version badge in README.md
 wgpu = { version = "0.19.3" }
