--- a/integrations/demo_svg/Cargo.toml
+++ b/integrations/demo_svg/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "vello_svg"
+name = "demo_svg"
 description = "Render a usvg document to a Vello scene"
 categories = ["rendering", "graphics"]
 keywords = ["2d", "vector-graphics", "vello"]
