--- a/examples/scenes/Cargo.toml
+++ b/examples/scenes/Cargo.toml
@@ -11,7 +11,7 @@ workspace = true
 
 [dependencies]
 vello = { path = "../../" }
-vello_svg = { path = "../../integrations/vello_svg" }
+demo_svg = { path = "../../integrations/demo_svg" }
 anyhow = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
 image = "0.24.9"
