retained encoded glyph caching
This enables caching for variable glyphs, adds support for pruning the cache and retains the Resolver in the Renderer struct so that glyphs can be cached across frames.

--- a/crates/encoding/Cargo.toml
+++ b/crates/encoding/Cargo.toml
@@ -27,3 +27,4 @@ bytemuck = { workspace = true }
 skrifa = { workspace = true, optional = true }
 peniko = { workspace = true }
 guillotiere = { version = "0.6.2", optional = true }
+smallvec = { workspace = true }
