--- a/examples/scenes/Cargo.toml
+++ b/examples/scenes/Cargo.toml
@@ -11,12 +11,13 @@ workspace = true
 
 [dependencies]
 vello = { path = "../../" }
-vello_svg = { path = "../../integrations/vello_svg" }
 anyhow = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
 image = "0.24.9"
 rand = "0.8.5"
 instant = { workspace = true }
+# for pico_svg
+roxmltree = "0.19"
 
 # Used for the `download` command
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
