--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,6 +75,7 @@ skrifa = "0.19.0"
 peniko = "0.1.0"
 futures-intrusive = "0.5.0"
 raw-window-handle = "0.6.0"
+smallvec = "1.13.2"
 
 # NOTE: Make sure to keep this in sync with the version badge in README.md
 wgpu = { version = "0.19.3" }
