features: Use `dep:` syntax to enable optional deps.

--- a/crates/encoding/Cargo.toml
+++ b/crates/encoding/Cargo.toml
@@ -12,7 +12,7 @@ default = ["full"]
 
 # Enables support for the full pipeline including late-bound
 # resources (gradients, images and glyph runs)
-full = ["skrifa", "guillotiere"]
+full = ["dep:skrifa", "dep:guillotiere"]
 
 # Enables an optional GPU memory usage estimation utility. This can be used to
 # perform additional computations in order to estimate the minimum required allocations
