Reference `vello` via workspace dep.
This makes `vello` the same as the other crates like `vello_encoding`
and `vello_shaders`.

This change isn't done for `examples/simple/Cargo.toml` as changing
that `path` to a `workspace` results in a warning from cargo.

--- a/examples/headless/Cargo.toml
+++ b/examples/headless/Cargo.toml
@@ -10,7 +10,7 @@ publish = false
 workspace = true
 
 [dependencies]
-vello = { path = "../../" }
+vello = { workspace = true }
 scenes = { path = "../scenes" }
 anyhow = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
