--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,6 +70,7 @@ clippy.doc_markdown = "warn"
 clippy.semicolon_if_nothing_returned = "warn"
 
 [workspace.dependencies]
+vello = { version = "0.1.0", path = "." }
 vello_encoding = { version = "0.1.0", path = "crates/encoding" }
 vello_shaders = { version = "0.1.0", path = "crates/shaders" }
 bytemuck = { version = "1.15.0", features = ["derive"] }
