--- a/crates/tests/Cargo.toml
+++ b/crates/tests/Cargo.toml
@@ -10,7 +10,7 @@ publish = false
 workspace = true
 
 [dependencies]
-vello = { path = "../.." }
+vello = { workspace = true }
 anyhow = { workspace = true }
 
 wgpu = { workspace = true }
