--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -291,7 +291,7 @@ jobs:
       - name: cargo doc
         run: cargo doc --workspace --locked --all-features --no-deps --document-private-items -Zunstable-options -Zrustdoc-scrape-examples
 
-  # If this fails, consider changing your text or adding something to `.typos.toml`
+  # If this fails, consider changing your text or adding something to .typos.toml
   typos:
     runs-on: ubuntu-latest
     steps:
