--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [workspace]
 resolver = "2"
 members = [
-    "crates/encoding",
-    "crates/shaders",
-    "crates/tests",
+    "vello",
+    "vello_encoding",
+    "vello_shaders",
+    "vello_tests",
 
     "examples/headless",
     "examples/with_winit",
@@ -27,53 +28,14 @@ rust-version = "1.75"
 license = "Apache-2.0 OR MIT"
 repository = "https://github.com/linebender/vello"
 
-[package]
-name = "vello"
-version.workspace = true
-description = "An experimental GPU compute-centric 2D renderer."
-categories = ["rendering", "graphics"]
-keywords = ["2d", "vector-graphics"]
-exclude = ["/.github/", "/doc/", "/examples/", ".gitignore"]
-edition.workspace = true
-rust-version.workspace = true
-license.workspace = true
-repository.workspace = true
-
-[features]
-default = ["wgpu"]
-# Enables GPU memory usage estimation. This performs additional computations
-# in order to estimate the minimum required allocations for buffers backing
-# bump-allocated GPU memory.
-# TODO: Turn this into a runtime option used at resolve time and remove the feature.
-bump_estimate = ["vello_encoding/bump_estimate"]
-hot_reload = ["vello_shaders/compile"]
-buffer_labels = []
-
-[lints]
-workspace = true
-
-[dependencies]
-vello_encoding = { workspace = true }
-vello_shaders = { workspace = true }
-bytemuck = { workspace = true }
-skrifa = { workspace = true }
-peniko = { workspace = true }
-wgpu = { workspace = true, optional = true }
-log = { workspace = true }
-raw-window-handle = { workspace = true }
-static_assertions = { workspace = true }
-futures-intrusive = { workspace = true }
-wgpu-profiler = { workspace = true, optional = true }
-thiserror = { workspace = true }
-
 [workspace.lints]
 clippy.doc_markdown = "warn"
 clippy.semicolon_if_nothing_returned = "warn"
 
 [workspace.dependencies]
-vello = { version = "0.1.0", path = "." }
-vello_encoding = { version = "0.1.0", path = "crates/encoding" }
-vello_shaders = { version = "0.1.0", path = "crates/shaders" }
+vello = { version = "0.1.0", path = "vello" }
+vello_encoding = { version = "0.1.0", path = "vello_encoding" }
+vello_shaders = { version = "0.1.0", path = "vello_shaders" }
 bytemuck = { version = "1.16.0", features = ["derive"] }
 skrifa = "0.19.1"
 peniko = "0.1.0"
