--- a/examples/simple/Cargo.toml
+++ b/examples/simple/Cargo.toml
@@ -12,7 +12,7 @@ workspace = true
 [dependencies]
 # When using this example outside of the original Vello workspace,
 # remove the path property of the following Vello dependency requirement.
-vello = { version = "0.1.0", path = "../../" }
+vello = { version = "0.1.0", path = "../../vello" }
 anyhow = "1.0.83"
 pollster = "0.3.0"
 wgpu = "0.20.0"
