--- a/examples/with_winit/Cargo.toml
+++ b/examples/with_winit/Cargo.toml
@@ -30,7 +30,6 @@ vello = { workspace = true, features = ["buffer_labels"] }
 scenes = { path = "../scenes" }
 anyhow = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
-instant = { workspace = true }
 pollster = { workspace = true }
 wgpu-profiler = { workspace = true, optional = true }
 
@@ -67,4 +66,5 @@ console_error_panic_hook = "0.1.7"
 console_log = "1.0.0"
 wasm-bindgen-futures = "0.4.42"
 web-sys = { version = "0.3.69", features = ["HtmlCollection", "Text"] }
+web-time = { workspace = true }
 getrandom = { version = "0.2.15", features = ["js"] }
