--- a/vello/Cargo.toml
+++ b/vello/Cargo.toml
@@ -18,6 +18,8 @@ default = ["wgpu"]
 bump_estimate = ["vello_encoding/bump_estimate"]
 hot_reload = ["vello_shaders/compile"]
 buffer_labels = []
+wgpu = ["dep:wgpu"]
+wgpu-profiler = ["dep:wgpu-profiler"]
 
 [lints]
 workspace = true
