--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ smallvec = "1.13.2"
 static_assertions = "1.1.0"
 thiserror = "1.0.61"
 
-# NOTE: Make sure to keep this in sync with the version badge in README.md
+# NOTE: Make sure to keep this in sync with the version badge in README.md and vello/README.md
 wgpu = { version = "0.20.0" }
 log = "0.4.21"
 
