--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ thiserror = "1.0.61"
 # NOTE: Make sure to keep this in sync with the version badge in README.md and vello/README.md
 wgpu = { version = "0.20.0" }
 log = "0.4.21"
+image = { version = "0.25.1", default-features = false }
 
 # Used for examples
 clap = "4.5.4"
