--- a/vello_tests/Cargo.toml
+++ b/vello_tests/Cargo.toml
@@ -16,3 +16,5 @@ anyhow = { workspace = true }
 pollster = { workspace = true }
 png = "0.17.13"
 futures-intrusive = { workspace = true }
+nv-flip = "0.1.2"
+image = { workspace = true, features = ["png"] }
