--- a/vello_tests/Cargo.toml
+++ b/vello_tests/Cargo.toml
@@ -18,3 +18,5 @@ png = "0.17.13"
 futures-intrusive = { workspace = true }
 nv-flip = "0.1.2"
 image = { workspace = true, features = ["png"] }
+
+scenes = { workspace = true }
