Document the MSRV in CHANGELOG.md

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,8 @@ members = [
 version = "0.2.0"
 
 edition = "2021"
-# Keep in sync with RUST_MIN_VER in .github/workflows/ci.yml and with the relevant README.md files.
+# Keep in sync with RUST_MIN_VER in .github/workflows/ci.yml, with the relevant README.md files
+# and with the MSRV in the `Unreleased` section of CHANGELOG.md.
 rust-version = "1.75"
 license = "Apache-2.0 OR MIT"
 repository = "https://github.com/linebender/vello"
