--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ env:
 # Using cargo-hack also allows us to more easily test the feature matrix of our packages.
 # We use --each-feature & --optional-deps which will run a separate check for every feature.
 #
-# We use macos-14 explictly instead of macos-latest because:
+# We use macos-14 explicitly instead of macos-latest because:
 #   * macos-latest currently points to macos-12
 #   * macos-14 provides us with the GPU support we want for testing
 #   * macos-14 comes with the M1 CPU which compiles our code much faster than the older runners
