Add some snapshot test infrastructure (#610)
Fixes #608 

This does not add a wide gamut of tests - I imagine that the
`test_scenes` will provide some good fodder here.
There are some quality-of-life features included:

- You can use `VELLO_TEST_CREATE=all` to create new tests. It is
recommended to set this on your local machine (and it won't be set on
CI)
- You can use `VELLO_TEST_UPDATE=all` to update with new contents if the
test fails. (Note that if there's a minor change which passes the test,
this won't update)

These variables can also filter to specific tests if needed.
The saved snapshots are always created using the GPU renderer, but it is
set up to be easy to use the CPU renderer for tests as well.

Using `cargo nextest` for running tests is recommended; indeed, it seems
to be now required, as the tests segfault without it

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,10 @@ env:
   # List of packages that will be checked with the minimum supported Rust version.
   # This should be limited to packages that are intended for publishing.
   RUST_MIN_VER_PKGS: "-p vello -p vello_encoding -p vello_shaders"
+  # List of packages that can not target wasm.
+  # `vello_tests` uses `nv-flip`, which doesn't support wasm.
+  NO_WASM_PKGS: "--exclude vello_tests"
+
 
 
 # Rationale
@@ -120,10 +124,10 @@ jobs:
           tool: cargo-hack
 
       - name: cargo clippy
-        run: cargo hack clippy --workspace --locked --target wasm32-unknown-unknown --each-feature --optional-deps -- -D warnings
+        run: cargo hack clippy --workspace ${{ env.NO_WASM_PKGS }} --locked --target wasm32-unknown-unknown --each-feature --optional-deps -- -D warnings
 
       - name: cargo clippy (auxiliary)
-        run: cargo hack clippy --workspace --locked --target wasm32-unknown-unknown --each-feature --optional-deps --tests --benches --examples -- -D warnings
+        run: cargo hack clippy --workspace ${{ env.NO_WASM_PKGS }} --locked --target wasm32-unknown-unknown --each-feature --optional-deps --tests --benches --examples -- -D warnings
 
   test-stable:
     name: cargo test
@@ -164,9 +168,15 @@ jobs:
           sudo add-apt-repository ppa:kisak/turtle -y
           sudo apt-get update
           sudo apt install -y xvfb libegl1-mesa libgl1-mesa-dri libxcb-xfixes0-dev mesa-vulkan-drivers
+      
+      - name: Install cargo-nextest
+        uses: taiki-e/install-action@v2
+        with:
+          tool: cargo-nextest
 
       - name: cargo test
-        run: cargo test --workspace --locked --all-features
+        # TODO: Maybe use --release; the CPU shaders are extremely slow when unoptimised
+        run: cargo nextest run --workspace --locked --all-features
         env:
           VELLO_CI_GPU_SUPPORT: ${{ matrix.gpu }}
 
@@ -187,7 +197,7 @@ jobs:
 
       # TODO: Find a way to make tests work. Until then the tests are merely compiled.
       - name: cargo test compile
-        run: cargo test --workspace --locked --target wasm32-unknown-unknown --all-features --no-run
+        run: cargo test --workspace ${{ env.NO_WASM_PKGS }} --locked --target wasm32-unknown-unknown --all-features --no-run
 
   check-stable-android:
     name: cargo check (aarch64-android)
@@ -263,6 +273,8 @@ jobs:
           tool: cargo-hack
 
       - name: cargo check
+        # We don't include ${{ env.NO_WASM_PKGS }} here, because `-p foo --exclude foo` doesn't work
+        # and none of our `NO_WASM_PKGS` have an MSRV.
         run: cargo hack check ${{ env.RUST_MIN_VER_PKGS }} --locked --target wasm32-unknown-unknown --each-feature --optional-deps
 
   doc:
