--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ thiserror = "1.0.61"
 # NOTE: Make sure to keep this in sync with the version badge in README.md and vello/README.md
 wgpu = { version = "0.20.0" }
 log = "0.4.21"
+image = { version = "0.25.1", default-features = false }
 
 # Used for examples
 clap = "4.5.4"
@@ -56,3 +57,4 @@ anyhow = "1.0.86"
 pollster = "0.3.0"
 web-time = "1.1.0"
 wgpu-profiler = "0.17.0"
+scenes = { path = "examples/scenes" }
