Fix dead code warnings and a subset of `unreachable_pub` (#617)
This also unblocks the upgrade to Rust 1.79.

As far as I can tell, this doesn't make anything newly private, it just
properly tracks the private state of all items.

The new 1.79 dead code warnings were caused by the build script for
`vello_shaders`, which uses custom path imports to import the same
modules as `vello_shaders` itself uses.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,9 @@ repository = "https://github.com/linebender/vello"
 [workspace.lints]
 clippy.doc_markdown = "warn"
 clippy.semicolon_if_nothing_returned = "warn"
+# We use a modified version of `unreachable_pub`, where we mark associated functions of pub(crate) items as pub.
+# This policy was implemented as it could gain begrudging consensus - there is no lint for this.
+# rust.unreachable_pub = "warn"
 
 [workspace.dependencies]
 vello = { version = "0.2.0", path = "vello" }
