Finish bitmap emoji rendering

--- a/vello/Cargo.toml
+++ b/vello/Cargo.toml
@@ -38,3 +38,5 @@ static_assertions = { workspace = true }
 futures-intrusive = { workspace = true }
 wgpu-profiler = { workspace = true, optional = true }
 thiserror = { workspace = true }
+# TODO: Add feature for built-in bitmap emoji support?
+png = { version = "0.17.13" }
