--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -129,8 +129,30 @@ jobs:
       - name: cargo clippy (auxiliary)
         run: cargo hack clippy --workspace ${{ env.NO_WASM_PKGS }} --locked --target wasm32-unknown-unknown --each-feature --optional-deps --tests --benches --examples -- -D warnings
 
+  prime-lfs-cache:
+    name: Prime LFS Cache
+    runs-on: ubuntu-stable
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+      
+    - name: Cache git lfs
+      id: lfs-cache
+      uses: actions/cache@v4
+      with:
+        path: .git/lfs
+        # The files targeted with git lfs
+        key: vello-lfs-${{ hashFiles('vello_tests/lfs_snapshots/*.png') }}
+        restore-keys: vello-lfs-
+        enableCrossOsArchive: true
+
+    - name: Fetch lfs data
+      if: ${{ steps.lfs-cache.outputs.cache-hit != 'true' }}
+      run: git lfs fetch
+  
   test-stable:
     name: cargo test
+    needs: prime-lfs-cache
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -146,9 +168,27 @@ jobs:
             gpu: 'no'
     steps:
       - uses: actions/checkout@v4
+        # We intentionally do not use lfs: true here
 
       - name: restore cache
         uses: Swatinem/rust-cache@v2
+
+      - name: Restore lfs cache
+        id: lfs-cache
+        uses: actions/cache@v4
+        with:
+          path: .git/lfs
+          # The files targeted with git lfs
+          key: vello-lfs-${{ hashFiles('vello_tests/lfs_snapshots/*.png') }}
+          enableCrossOsArchive: true
+      
+      - if: ${{ steps.lfs-cache.outputs.cache-hit != 'true' }}
+        # If this step fails for your run, please inform @DJMcNab and remove this step
+        # This is part of an experiment in working with git lfs
+        run: exit 1
+      
+      - name: Checkout LFS files
+        run: git lfs checkout
 
       - name: install stable toolchain
         uses: dtolnay/rust-toolchain@master
