--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 # LFS settings
 # If changing, also change in .github/workflows/ci.yml
-vello_tests/lfs_snapshots/*.png filter=lfs diff=lfs merge=lfs -text
+vello_tests/snapshots/*.png filter=lfs diff=lfs merge=lfs -text
