--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,7 +143,7 @@ jobs:
       with:
         path: .git/lfs
         # The files targeted with git lfs
-        key: vello-lfs-${{ hashFiles('vello_tests/lfs_snapshots/*.png') }}
+        key: vello-lfs-${{ hashFiles('vello_tests/snapshots/*.png') }}
         restore-keys: vello-lfs-
         enableCrossOsArchive: true
 
@@ -180,7 +180,7 @@ jobs:
         with:
           path: .git/lfs
           # The files targeted with git lfs
-          key: vello-lfs-${{ hashFiles('vello_tests/lfs_snapshots/*.png') }}
+          key: vello-lfs-${{ hashFiles('vello_tests/snapshots/*.png') }}
           enableCrossOsArchive: true
   
       - name: Checkout LFS files
