--- a/examples/simple_sdl2/Cargo.toml
+++ b/examples/simple_sdl2/Cargo.toml
@@ -14,4 +14,4 @@ workspace = true
 # remove the path property of the following Vello dependency requirement.
 vello = { version = "0.2.0", path = "../../vello" }
 pollster = "0.3.0"
-sdl2 = { version = "0.37.0", features = ["raw-window-handle"] }
+sdl2 = { version = "0.37.0", features = ["raw-window-handle", "bundled"] }
