--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ env:
   RUST_MIN_VER_PKGS: "-p vello -p vello_encoding -p vello_shaders"
   # List of packages that can not target wasm.
   # `vello_tests` uses `nv-flip`, which doesn't support wasm.
-  NO_WASM_PKGS: "--exclude vello_tests"
+  NO_WASM_PKGS: "--exclude vello_tests --exclude simple_sdl2"
 
 
 
