--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,7 +52,7 @@ static_assertions = "1.1.0"
 thiserror = "1.0.64"
 
 # NOTE: Make sure to keep this in sync with the version badge in README.md and vello/README.md
-wgpu = { version = "22.1.0" }
+wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "62cef44a1fa04f9ef811362d2b3fd8f80ee306b6" }
 log = "0.4.22"
 image = { version = "0.25.2", default-features = false }
 
