--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ resolver = "2"
 members = [
     "vello",
     "vello_encoding",
+    "vello_pacing",
     "vello_shaders",
     "vello_tests",
 
@@ -52,7 +53,7 @@ static_assertions = "1.1.0"
 thiserror = "1.0.64"
 
 # NOTE: Make sure to keep this in sync with the version badge in README.md and vello/README.md
-wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "e99a2167bfc1d6f6bb24908e04192e2dbcf1fff1" }
+wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "685c2133f296ea5bf48e4ee96853f725c2a68980" }
 log = "0.4.22"
 image = { version = "0.25.2", default-features = false }
 
