Do a lot more writing on potential solutions.
Save some more thoughts

Continue sketch of pacing

--- a/vello_pacing/Cargo.toml
+++ b/vello_pacing/Cargo.toml
@@ -8,6 +8,8 @@ repository.workspace = true
 
 [dependencies]
 wgpu.workspace = true
+vello.workspace = true
+ash = { version = "0.38.0", default-features = false }
 
 [lints]
 workspace = true
