--- a/examples/with_winit/Cargo.toml
+++ b/examples/with_winit/Cargo.toml
@@ -63,6 +63,7 @@ tracing-subscriber = { version = "0.3.18", default-features = false, features = 
     "registry",
 ] }
 profiling = { version = "1.0.15", features = ["profile-with-tracing"] }
+ndk = { version = "0.9", features = ["api-level-33"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.7"
@@ -71,3 +72,6 @@ wasm-bindgen-futures = "0.4.43"
 web-sys = { version = "0.3.70", features = ["HtmlCollection", "Text"] }
 web-time = { workspace = true }
 getrandom = { version = "0.2.15", features = ["js"] }
+
+[package.metadata.android.application]
+debuggable = true
