Remove "experimental" verbiage.
Vello is in use by others and we're actively encouraging such use.

While Vello has some current shortcomings and issues, that's different
from being "experimental".

--- a/vello/Cargo.toml
+++ b/vello/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "vello"
 version.workspace = true
-description = "An experimental GPU compute-centric 2D renderer."
+description = "A GPU compute-centric 2D renderer."
 categories = ["rendering", "graphics"]
 keywords = ["2d", "vector-graphics"]
 edition.workspace = true
